# sofia-s

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml
docs/: google-forms.md
src/: conftest.py  db.sqlite3
src/accounts/: admin.py  emails.py  forms.py  models.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py
src/accounts/tests/: test_models.py  test_views.py
src/api/: urls.py  views.py
src/api/tests/: test_views.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/config/settings/: base.py  development.py  production.py
src/core/: apps.py  decorators.py  views.py
src/core/tests/: test_views.py
src/form_responses/: apps.py  google_forms.py  urls.py  views.py
src/form_responses/templates/form_responses/: responses.html
src/sheets/: admin.py  models.py  services.py  types.py  urls.py  views.py
src/sheets/management/commands/: sync_sheets.py
src/sheets/migrations/: 0001_initial.py
src/sheets/tests/: test_models.py  test_services.py
src/static/css/: custom.css
src/static/js/: charts.js
src/templates/: base.html
src/templates/accounts/: login_verify_invalid.html
src/templates/dashboard/: dashboard.html
src/templates/partials/: messages.html
src/templates/registration/: login.html  login_sent.html
src/templates/sheets/: spreadsheet_detail.html  spreadsheet_list.html
