[project]
name = "sof"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "google-api-python-client (>=2.100.0,<3.0.0)",
    "google-auth (>=2.25.0,<3.0.0)",
    "google-auth-httplib2 (>=0.2.0,<1.0.0)",
    "google-auth-oauthlib (>=1.2.0,<2.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.2,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "django-stubs (>=5.2.9,<6.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]

[tool.ruff]
target-version = "py314"
line-length = 88
lint.select = ["E", "F", "I", "UP", "B"]
lint.ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.14"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
strict_equality = true
exclude = [
    "migrations/",
    "venv/",
    ".venv/",
    "__pycache__/",
    "src/config/",
    "src/manage.py",
]
